Main/Frontend/src/assets/css/style.css
/* ... */
.bmdrop {
  background-color: var(--color-2);
  border: 1px solid var(--color-4);
  padding: 5px;
  position: absolute;
  left: calc(var(--sidebar-width) + 30px);
  top: 165px;
  height: 30px;
}

#filters-container {
  flex: 1;
  display: flex;
  align-items: center;
  width: auto;
  gap: 8px;
}

#host_filter {
  width: 60px;
  display: none;
}

#filterStr {
  flex: 1;
  background-color: black;
  color: white;
  border: 1px solid grey;
  padding: 5px;
}

#payloadascii {
  width: 320px;
  color: white;
  height: 14px;
  position: absolute;
  padding: 15px;
  margin-top: -60px;
  text-size: 12px;
  background-color: var(--color-4);
  color: var(--color-1);
  font-family: monospace;
  padding: 5px;
  border: 1px solid var(--color-3);
  opacity: 0;
  transition: opacity 0.3s ease;
  pointer-events: none;
}

#asciiOffset {
  width: 80px;
  position: absolute;
}

#asciiText {
  color: white;
  width: 250px;
  margin-left: 70px;
  position: absolute;
  text-align: right;
}
#payloadascii.visible {
  opacity: 1;
  pointer-events: auto;
}

.logo-cont img {
  width: 100%;
  height: 100%;
  object-fit: cover; /* or 'contain' */
  margin-top: 9px;
}

